--- a/test.ipynb
+++ b/test.ipynb
@@ -72,73 +72,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r  0% ▕                                                            ▏ \r100% ▕████████████████████████████████████████████████████████████▏ \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "out = dw.query('select * from \"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet\"')"
+    "# out = dw.query('select * from \"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet\"')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r  0% ▕                                                            ▏ \r100% ▕████████████████████████████████████████████████████████████▏ \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "┌───────────┬─────────────────────┬─────────────────────┬───┬────────────┬──────────────┬──────────────┐\n",
-       "│ vendor_id │   pickup_datetime   │  dropoff_datetime   │ … │ tip_amount │ tolls_amount │ total_amount │\n",
-       "│  varchar  │       varchar       │       varchar       │   │   double   │    double    │    double    │\n",
-       "├───────────┼─────────────────────┼─────────────────────┼───┼────────────┼──────────────┼──────────────┤\n",
-       "│ VTS       │ 2010-01-26 07:41:00 │ 2010-01-26 07:45:00 │ … │        0.0 │          0.0 │          5.0 │\n",
-       "│ DDS       │ 2010-01-30 23:31:00 │ 2010-01-30 23:46:12 │ … │        0.0 │          0.0 │         16.3 │\n",
-       "│ DDS       │ 2010-01-18 20:22:20 │ 2010-01-18 20:38:12 │ … │        0.0 │          0.0 │         12.7 │\n",
-       "│ VTS       │ 2010-01-09 01:18:00 │ 2010-01-09 01:35:00 │ … │        0.0 │          0.0 │         14.3 │\n",
-       "│ CMT       │ 2010-01-18 19:10:14 │ 2010-01-18 19:17:07 │ … │       0.87 │          0.0 │         6.67 │\n",
-       "│ DDS       │ 2010-01-23 18:40:25 │ 2010-01-23 18:54:51 │ … │        1.0 │          0.0 │         12.0 │\n",
-       "│ VTS       │ 2010-01-17 09:18:00 │ 2010-01-17 09:25:00 │ … │        0.0 │          0.0 │          6.6 │\n",
-       "│ VTS       │ 2010-01-09 13:49:00 │ 2010-01-09 13:56:00 │ … │        0.0 │          0.0 │          7.4 │\n",
-       "│ VTS       │ 2010-01-09 00:25:00 │ 2010-01-09 00:39:00 │ … │        0.0 │          0.0 │         12.3 │\n",
-       "│ VTS       │ 2010-01-27 18:15:00 │ 2010-01-27 18:29:00 │ … │        2.0 │          0.0 │         12.0 │\n",
-       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
-       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
-       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
-       "│ CMT       │ 2010-01-29 10:10:30 │ 2010-01-29 10:16:54 │ … │       1.32 │          0.0 │         7.92 │\n",
-       "│ CMT       │ 2010-01-04 20:25:15 │ 2010-01-04 20:46:17 │ … │       4.06 │          0.0 │        24.36 │\n",
-       "│ VTS       │ 2010-01-07 17:57:00 │ 2010-01-07 18:07:00 │ … │        0.0 │          0.0 │          9.6 │\n",
-       "│ VTS       │ 2010-01-08 00:08:00 │ 2010-01-08 00:22:00 │ … │        1.5 │          0.0 │         12.6 │\n",
-       "│ CMT       │ 2010-01-31 20:36:38 │ 2010-01-31 20:58:12 │ … │        3.0 │          0.0 │         21.7 │\n",
-       "│ CMT       │ 2010-01-16 11:03:42 │ 2010-01-16 11:14:46 │ … │        0.0 │          0.0 │          9.0 │\n",
-       "│ CMT       │ 2010-01-05 08:56:30 │ 2010-01-05 09:04:29 │ … │        0.0 │          0.0 │          6.6 │\n",
-       "│ CMT       │ 2010-01-08 08:40:48 │ 2010-01-08 09:04:44 │ … │        2.0 │          0.0 │         21.8 │\n",
-       "│ CMT       │ 2010-01-08 07:06:21 │ 2010-01-08 07:13:34 │ … │        0.0 │          0.0 │          7.0 │\n",
-       "│ VTS       │ 2010-01-09 03:09:00 │ 2010-01-09 03:18:00 │ … │        0.0 │          0.0 │         10.7 │\n",
-       "├───────────┴─────────────────────┴─────────────────────┴───┴────────────┴──────────────┴──────────────┤\n",
-       "│ ? rows (>9999 rows, 20 shown)                                                   18 columns (6 shown) │\n",
-       "└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dw.Table('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet')"
+    "# dw.Table('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet')"
    ]
   },
   {
@@ -159,24 +104,24 @@
     {
      "data": {
       "text/plain": [
-       "{'vendor_id': 'CMT',\n",
-       " 'pickup_datetime': '2010-01-29 18:50:39',\n",
-       " 'dropoff_datetime': '2010-01-29 19:07:36',\n",
+       "{'vendor_id': 'VTS',\n",
+       " 'pickup_datetime': '2010-01-07 16:04:00',\n",
+       " 'dropoff_datetime': '2010-01-07 16:13:00',\n",
        " 'passenger_count': np.int64(1),\n",
-       " 'trip_distance': np.float64(2.3),\n",
-       " 'pickup_longitude': np.float64(-73.95698199999998),\n",
-       " 'pickup_latitude': np.float64(40.770736),\n",
+       " 'trip_distance': np.float64(1.95),\n",
+       " 'pickup_longitude': np.float64(-73.988265),\n",
+       " 'pickup_latitude': np.float64(40.75385),\n",
        " 'rate_code': '1',\n",
-       " 'store_and_fwd_flag': '0',\n",
-       " 'dropoff_longitude': np.float64(-73.97958099999998),\n",
-       " 'dropoff_latitude': np.float64(40.746423),\n",
-       " 'payment_type': 'Cre',\n",
-       " 'fare_amount': np.float64(10.1),\n",
+       " 'store_and_fwd_flag': None,\n",
+       " 'dropoff_longitude': np.float64(-73.963482),\n",
+       " 'dropoff_latitude': np.float64(40.75738),\n",
+       " 'payment_type': 'CAS',\n",
+       " 'fare_amount': np.float64(7.7),\n",
        " 'surcharge': np.float64(1.0),\n",
        " 'mta_tax': np.float64(0.5),\n",
-       " 'tip_amount': np.float64(1.74),\n",
+       " 'tip_amount': np.float64(0.0),\n",
        " 'tolls_amount': np.float64(0.0),\n",
-       " 'total_amount': np.float64(13.34)}"
+       " 'total_amount': np.float64(9.2)}"
       ]
      },
      "execution_count": null,
@@ -220,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -280,29 +225,29 @@
        "│      hexid      │        tip         │\n",
        "│     varchar     │       double       │\n",
        "├─────────────────┼────────────────────┤\n",
-       "│ 862a103b7ffffff │  2.440065244855701 │\n",
-       "│ 862a100afffffff │ 0.8011410655084678 │\n",
-       "│ 862a100efffffff │ 1.2719552715654951 │\n",
-       "│ 862a10777ffffff │ 0.7949552868931108 │\n",
-       "│ 862a10b1fffffff │                4.0 │\n",
-       "│ 862a10ccfffffff │ 0.8404166666666666 │\n",
-       "│ 862a10097ffffff │  1.585727788279773 │\n",
-       "│ 862a1022fffffff │ 1.1291666666666667 │\n",
-       "│ 862a10007ffffff │ 0.6793565683646113 │\n",
-       "│ 862a10297ffffff │ 0.7737313432835822 │\n",
+       "│ 862a1072fffffff │  0.757499807122183 │\n",
+       "│ 862a100c7ffffff │ 0.6247265087477886 │\n",
+       "│ 862a10737ffffff │ 1.0371764705882351 │\n",
+       "│ 862a10017ffffff │ 0.8133979641299078 │\n",
+       "│ 862a10087ffffff │ 1.5446507266760428 │\n",
+       "│ 862a1052fffffff │ 4.3549999999999995 │\n",
+       "│ 862a102b7ffffff │ 0.7488484848484849 │\n",
+       "│ 862a102f7ffffff │ 0.6702127659574468 │\n",
+       "│ 862a10627ffffff │ 0.7683108108108109 │\n",
+       "│ 862a1062fffffff │ 1.2124083769633511 │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
-       "│ 862af1807ffffff │                1.0 │\n",
-       "│ 860e508a7ffffff │                1.4 │\n",
-       "│ 862af4b77ffffff │                1.0 │\n",
-       "│ 862a12887ffffff │                2.0 │\n",
-       "│ 862aa5167ffffff │                1.0 │\n",
-       "│ 862a11467ffffff │                4.0 │\n",
-       "│ 862a1678fffffff │                2.0 │\n",
-       "│ 862aad147ffffff │                3.0 │\n",
-       "│ 862a11bb7ffffff │                2.1 │\n",
-       "│ 862758907ffffff │                1.5 │\n",
+       "│ 862a14477ffffff │                1.0 │\n",
+       "│ 862b8a127ffffff │                4.0 │\n",
+       "│ 862a135a7ffffff │                9.0 │\n",
+       "│ 862a1356fffffff │                1.0 │\n",
+       "│ 862a00327ffffff │                1.0 │\n",
+       "│ 862a13cb7ffffff │                0.5 │\n",
+       "│ 862a46987ffffff │                1.5 │\n",
+       "│ 862a2e08fffffff │                1.4 │\n",
+       "│ 862aaab9fffffff │              10.01 │\n",
+       "│ 862a33c0fffffff │                1.0 │\n",
        "├─────────────────┴────────────────────┤\n",
        "│ 850 rows (20 shown)        2 columns │\n",
        "└──────────────────────────────────────┘"
@@ -319,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -848,20 +793,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Database:\n",
-       "    rel1: 14863778 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount']\n",
-       "    rel2: 11145409 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount', '__index_level_0__']"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "out >> 'pandas'"
    ]
